hw03/hw03/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declaration
Rule 2     program -> program external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     external_declaration -> EXTERN declaration
Rule 6     function_definition -> type function_declarator compound_instruction
Rule 7     declaration -> type declarator_list SEMI
Rule 8     declaration_list -> declaration
Rule 9     declaration_list -> declaration_list declaration
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    type -> STRING
Rule 13    declarator_list -> declarator
Rule 14    declarator_list -> declarator_list COMMA declarator
Rule 15    declarator -> function_declarator
Rule 16    declarator -> function_declarator EQUALS expression
Rule 17    function_declarator -> ID
Rule 18    function_declarator -> ID LPAREN parameter_list RPAREN
Rule 19    function_declarator -> ID LPAREN RPAREN
Rule 20    parameter_list -> parameter_declaration
Rule 21    parameter_list -> parameter_list COMMA parameter_declaration
Rule 22    parameter_declaration -> type function_declarator
Rule 23    instruction -> expression_instruction
Rule 24    instruction -> compound_instruction
Rule 25    instruction -> select_instruction
Rule 26    instruction -> iteration_instruction
Rule 27    instruction -> jump_instruction
Rule 28    expression_instruction -> expression SEMI
Rule 29    compound_instruction -> LBRACE declaration_list instruction_list RBRACE
Rule 30    compound_instruction -> LBRACE instruction_list RBRACE
Rule 31    compound_instruction -> LBRACE declaration_list RBRACE
Rule 32    compound_instruction -> LBRACE RBRACE
Rule 33    instruction_list -> instruction
Rule 34    instruction_list -> instruction_list instruction
Rule 35    select_instruction -> IF LPAREN condition RPAREN instruction
Rule 36    select_instruction -> IF LPAREN condition RPAREN instruction ELSE instruction
Rule 37    iteration_instruction -> WHILE LPAREN condition RPAREN instruction
Rule 38    iteration_instruction -> FOR LPAREN expression SEMI condition SEMI expression RPAREN instruction
Rule 39    iteration_instruction -> DO instruction WHILE LPAREN condition RPAREN SEMI
Rule 40    jump_instruction -> RETURN expression SEMI
Rule 41    expression -> additive_expression
Rule 42    expression -> unary_expression assignment_operator expression
Rule 43    expression -> expression LSHIFT additive_expression
Rule 44    expression -> expression RSHIFT additive_expression
Rule 45    condition -> expression comparison_operator expression
Rule 46    comparison_operator -> EQ
Rule 47    comparison_operator -> NE
Rule 48    comparison_operator -> LT
Rule 49    comparison_operator -> GT
Rule 50    comparison_operator -> LE
Rule 51    comparison_operator -> GE
Rule 52    assignment_operator -> EQUALS
Rule 53    assignment_operator -> TIMESEQUAL
Rule 54    assignment_operator -> DIVEQUAL
Rule 55    assignment_operator -> MODEQUAL
Rule 56    assignment_operator -> PLUSEQUAL
Rule 57    assignment_operator -> MINUSEQUAL
Rule 58    additive_expression -> multiplicative_expression
Rule 59    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 60    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 61    multiplicative_expression -> unary_expression
Rule 62    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 63    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 64    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 65    unary_expression -> postfix_expression
Rule 66    unary_expression -> MINUS unary_expression
Rule 67    postfix_expression -> primary_expression
Rule 68    postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 69    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 70    postfix_expression -> postfix_expression PLUSPLUS
Rule 71    postfix_expression -> postfix_expression MINUSMINUS
Rule 72    primary_expression -> ID
Rule 73    primary_expression -> constant
Rule 74    primary_expression -> SCONST
Rule 75    primary_expression -> LPAREN expression RPAREN
Rule 76    argument_expression_list -> expression
Rule 77    argument_expression_list -> argument_expression_list COMMA expression
Rule 78    constant -> ICONST
Rule 79    constant -> FCONST

Terminals, with rules where they appear

COMMA                : 14 21 77
DIVEQUAL             : 54
DIVIDE               : 63
DO                   : 39
ELSE                 : 36
EQ                   : 46
EQUALS               : 16 52
EXTERN               : 5
FCONST               : 79
FLOAT                : 11
FOR                  : 38
GE                   : 51
GT                   : 49
ICONST               : 78
ID                   : 17 18 19 72
IF                   : 35 36
INT                  : 10
LBRACE               : 29 30 31 32
LE                   : 50
LPAREN               : 18 19 35 36 37 38 39 68 69 75
LSHIFT               : 43
LT                   : 48
MINUS                : 60 66
MINUSEQUAL           : 57
MINUSMINUS           : 71
MOD                  : 64
MODEQUAL             : 55
NE                   : 47
PLUS                 : 59
PLUSEQUAL            : 56
PLUSPLUS             : 70
RBRACE               : 29 30 31 32
RETURN               : 40
RPAREN               : 18 19 35 36 37 38 39 68 69 75
RSHIFT               : 44
SCONST               : 74
SEMI                 : 7 28 38 38 39 40
STRING               : 12
TIMES                : 62
TIMESEQUAL           : 53
WHILE                : 37 39
error                : 

Nonterminals, with rules where they appear

additive_expression  : 41 43 44 59 60
argument_expression_list : 68 77
assignment_operator  : 42
comparison_operator  : 45
compound_instruction : 6 24
condition            : 35 36 37 38 39
constant             : 73
declaration          : 4 5 8 9
declaration_list     : 9 29 31
declarator           : 13 14
declarator_list      : 7 14
expression           : 16 28 38 38 40 42 43 44 45 45 75 76 77
expression_instruction : 23
external_declaration : 1 2
function_declarator  : 6 15 16 22
function_definition  : 3
instruction          : 33 34 35 36 36 37 38 39
instruction_list     : 29 30 34
iteration_instruction : 26
jump_instruction     : 27
multiplicative_expression : 58 59 60 62 63 64
parameter_declaration : 20 21
parameter_list       : 18 21
postfix_expression   : 65 68 69 70 71
primary_expression   : 67
program              : 2 0
select_instruction   : 25
type                 : 6 7 22
unary_expression     : 42 61 62 63 64 66

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declaration
    (2) program -> . program external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) external_declaration -> . EXTERN declaration
    (6) function_definition -> . type function_declarator compound_instruction
    (7) declaration -> . type declarator_list SEMI
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING

    EXTERN          shift and go to state 8
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    STRING          shift and go to state 3

    external_declaration           shift and go to state 1
    function_definition            shift and go to state 2
    program                        shift and go to state 6
    declaration                    shift and go to state 7
    type                           shift and go to state 9

state 1

    (1) program -> external_declaration .

    EXTERN          reduce using rule 1 (program -> external_declaration .)
    INT             reduce using rule 1 (program -> external_declaration .)
    FLOAT           reduce using rule 1 (program -> external_declaration .)
    STRING          reduce using rule 1 (program -> external_declaration .)
    $end            reduce using rule 1 (program -> external_declaration .)


state 2

    (3) external_declaration -> function_definition .

    EXTERN          reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    STRING          reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 3

    (12) type -> STRING .

    ID              reduce using rule 12 (type -> STRING .)


state 4

    (10) type -> INT .

    ID              reduce using rule 10 (type -> INT .)


state 5

    (11) type -> FLOAT .

    ID              reduce using rule 11 (type -> FLOAT .)


state 6

    (0) S' -> program .
    (2) program -> program . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) external_declaration -> . EXTERN declaration
    (6) function_definition -> . type function_declarator compound_instruction
    (7) declaration -> . type declarator_list SEMI
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING

    EXTERN          shift and go to state 8
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    STRING          shift and go to state 3

    external_declaration           shift and go to state 10
    function_definition            shift and go to state 2
    declaration                    shift and go to state 7
    type                           shift and go to state 9

state 7

    (4) external_declaration -> declaration .

    EXTERN          reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    STRING          reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 8

    (5) external_declaration -> EXTERN . declaration
    (7) declaration -> . type declarator_list SEMI
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    STRING          shift and go to state 3

    type                           shift and go to state 12
    declaration                    shift and go to state 11

state 9

    (6) function_definition -> type . function_declarator compound_instruction
    (7) declaration -> type . declarator_list SEMI
    (17) function_declarator -> . ID
    (18) function_declarator -> . ID LPAREN parameter_list RPAREN
    (19) function_declarator -> . ID LPAREN RPAREN
    (13) declarator_list -> . declarator
    (14) declarator_list -> . declarator_list COMMA declarator
    (15) declarator -> . function_declarator
    (16) declarator -> . function_declarator EQUALS expression

    ID              shift and go to state 15

    function_declarator            shift and go to state 13
    declarator                     shift and go to state 14
    declarator_list                shift and go to state 16

state 10

    (2) program -> program external_declaration .

    EXTERN          reduce using rule 2 (program -> program external_declaration .)
    INT             reduce using rule 2 (program -> program external_declaration .)
    FLOAT           reduce using rule 2 (program -> program external_declaration .)
    STRING          reduce using rule 2 (program -> program external_declaration .)
    $end            reduce using rule 2 (program -> program external_declaration .)


state 11

    (5) external_declaration -> EXTERN declaration .

    EXTERN          reduce using rule 5 (external_declaration -> EXTERN declaration .)
    INT             reduce using rule 5 (external_declaration -> EXTERN declaration .)
    FLOAT           reduce using rule 5 (external_declaration -> EXTERN declaration .)
    STRING          reduce using rule 5 (external_declaration -> EXTERN declaration .)
    $end            reduce using rule 5 (external_declaration -> EXTERN declaration .)


state 12

    (7) declaration -> type . declarator_list SEMI
    (13) declarator_list -> . declarator
    (14) declarator_list -> . declarator_list COMMA declarator
    (15) declarator -> . function_declarator
    (16) declarator -> . function_declarator EQUALS expression
    (17) function_declarator -> . ID
    (18) function_declarator -> . ID LPAREN parameter_list RPAREN
    (19) function_declarator -> . ID LPAREN RPAREN

    ID              shift and go to state 15

    function_declarator            shift and go to state 17
    declarator                     shift and go to state 14
    declarator_list                shift and go to state 16

state 13

    (6) function_definition -> type function_declarator . compound_instruction
    (15) declarator -> function_declarator .
    (16) declarator -> function_declarator . EQUALS expression
    (29) compound_instruction -> . LBRACE declaration_list instruction_list RBRACE
    (30) compound_instruction -> . LBRACE instruction_list RBRACE
    (31) compound_instruction -> . LBRACE declaration_list RBRACE
    (32) compound_instruction -> . LBRACE RBRACE

    SEMI            reduce using rule 15 (declarator -> function_declarator .)
    COMMA           reduce using rule 15 (declarator -> function_declarator .)
    EQUALS          shift and go to state 20
    LBRACE          shift and go to state 18

    compound_instruction           shift and go to state 19

state 14

    (13) declarator_list -> declarator .

    SEMI            reduce using rule 13 (declarator_list -> declarator .)
    COMMA           reduce using rule 13 (declarator_list -> declarator .)


state 15

    (17) function_declarator -> ID .
    (18) function_declarator -> ID . LPAREN parameter_list RPAREN
    (19) function_declarator -> ID . LPAREN RPAREN

    RPAREN          reduce using rule 17 (function_declarator -> ID .)
    COMMA           reduce using rule 17 (function_declarator -> ID .)
    EQUALS          reduce using rule 17 (function_declarator -> ID .)
    SEMI            reduce using rule 17 (function_declarator -> ID .)
    LBRACE          reduce using rule 17 (function_declarator -> ID .)
    LPAREN          shift and go to state 21


state 16

    (7) declaration -> type declarator_list . SEMI
    (14) declarator_list -> declarator_list . COMMA declarator

    SEMI            shift and go to state 23
    COMMA           shift and go to state 22


state 17

    (15) declarator -> function_declarator .
    (16) declarator -> function_declarator . EQUALS expression

    SEMI            reduce using rule 15 (declarator -> function_declarator .)
    COMMA           reduce using rule 15 (declarator -> function_declarator .)
    EQUALS          shift and go to state 20


state 18

    (29) compound_instruction -> LBRACE . declaration_list instruction_list RBRACE
    (30) compound_instruction -> LBRACE . instruction_list RBRACE
    (31) compound_instruction -> LBRACE . declaration_list RBRACE
    (32) compound_instruction -> LBRACE . RBRACE
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list declaration
    (33) instruction_list -> . instruction
    (34) instruction_list -> . instruction_list instruction
    (7) declaration -> . type declarator_list SEMI
    (23) instruction -> . expression_instruction
    (24) instruction -> . compound_instruction
    (25) instruction -> . select_instruction
    (26) instruction -> . iteration_instruction
    (27) instruction -> . jump_instruction
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING
    (28) expression_instruction -> . expression SEMI
    (29) compound_instruction -> . LBRACE declaration_list instruction_list RBRACE
    (30) compound_instruction -> . LBRACE instruction_list RBRACE
    (31) compound_instruction -> . LBRACE declaration_list RBRACE
    (32) compound_instruction -> . LBRACE RBRACE
    (35) select_instruction -> . IF LPAREN condition RPAREN instruction
    (36) select_instruction -> . IF LPAREN condition RPAREN instruction ELSE instruction
    (37) iteration_instruction -> . WHILE LPAREN condition RPAREN instruction
    (38) iteration_instruction -> . FOR LPAREN expression SEMI condition SEMI expression RPAREN instruction
    (39) iteration_instruction -> . DO instruction WHILE LPAREN condition RPAREN SEMI
    (40) jump_instruction -> . RETURN expression SEMI
    (41) expression -> . additive_expression
    (42) expression -> . unary_expression assignment_operator expression
    (43) expression -> . expression LSHIFT additive_expression
    (44) expression -> . expression RSHIFT additive_expression
    (58) additive_expression -> . multiplicative_expression
    (59) additive_expression -> . additive_expression PLUS multiplicative_expression
    (60) additive_expression -> . additive_expression MINUS multiplicative_expression
    (65) unary_expression -> . postfix_expression
    (66) unary_expression -> . MINUS unary_expression
    (61) multiplicative_expression -> . unary_expression
    (62) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (63) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (64) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (67) postfix_expression -> . primary_expression
    (68) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (69) postfix_expression -> . postfix_expression LPAREN RPAREN
    (70) postfix_expression -> . postfix_expression PLUSPLUS
    (71) postfix_expression -> . postfix_expression MINUSMINUS
    (72) primary_expression -> . ID
    (73) primary_expression -> . constant
    (74) primary_expression -> . SCONST
    (75) primary_expression -> . LPAREN expression RPAREN
    (78) constant -> . ICONST
    (79) constant -> . FCONST

    RBRACE          shift and go to state 38
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    STRING          shift and go to state 3
    LBRACE          shift and go to state 18
    IF              shift and go to state 47
    WHILE           shift and go to state 28
    FOR             shift and go to state 39
    DO              shift and go to state 24
    RETURN          shift and go to state 26
    MINUS           shift and go to state 30
    ID              shift and go to state 46
    SCONST          shift and go to state 29
    LPAREN          shift and go to state 44
    ICONST          shift and go to state 42
    FCONST          shift and go to state 33

    expression_instruction         shift and go to state 37
    select_instruction             shift and go to state 50
    constant                       shift and go to state 35
    iteration_instruction          shift and go to state 32
    unary_expression               shift and go to state 27
    expression                     shift and go to state 51
    compound_instruction           shift and go to state 48
    instruction                    shift and go to state 25
    postfix_expression             shift and go to state 34
    declaration_list               shift and go to state 49
    instruction_list               shift and go to state 41
    additive_expression            shift and go to state 31
    primary_expression             shift and go to state 43
    declaration                    shift and go to state 45
    jump_instruction               shift and go to state 36
    type                           shift and go to state 12
    multiplicative_expression      shift and go to state 40

state 19

    (6) function_definition -> type function_declarator compound_instruction .

    EXTERN          reduce using rule 6 (function_definition -> type function_declarator compound_instruction .)
    INT             reduce using rule 6 (function_definition -> type function_declarator compound_instruction .)
    FLOAT           reduce using rule 6 (function_definition -> type function_declarator compound_instruction .)
    STRING          reduce using rule 6 (function_definition -> type function_declarator compound_instruction .)
    $end            reduce using rule 6 (function_definition -> type function_declarator compound_instruction .)


state 20

    (16) declarator -> function_declarator EQUALS . expression
    (41) expression -> . additive_expression
    (42) expression -> . unary_expression assignment_operator expression
    (43) expression -> . expression LSHIFT additive_expression
    (44) expression -> . expression RSHIFT additive_expression
    (58) additive_expression -> . multiplicative_expression
    (59) additive_expression -> . additive_expression PLUS multiplicative_expression
    (60) additive_expression -> . additive_expression MINUS multiplicative_expression
    (65) unary_expression -> . postfix_expression
    (66) unary_expression -> . MINUS unary_expression
    (61) multiplicative_expression -> . unary_expression
    (62) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (63) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (64) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (67) postfix_expression -> . primary_expression
    (68) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (69) postfix_expression -> . postfix_expression LPAREN RPAREN
    (70) postfix_expression -> . postfix_expression PLUSPLUS
    (71) postfix_expression -> . postfix_expression MINUSMINUS
    (72) primary_expression -> . ID
    (73) primary_expression -> . constant
    (74) primary_expression -> . SCONST
    (75) primary_expression -> . LPAREN expression RPAREN
    (78) constant -> . ICONST
    (79) constant -> . FCONST

    MINUS           shift and go to state 30
    ID              shift and go to state 46
    SCONST          shift and go to state 29
    LPAREN          shift and go to state 44
    ICONST          shift and go to state 42
    FCONST          shift and go to state 33

    constant                       shift and go to state 35
    unary_expression               shift and go to state 27
    multiplicative_expression      shift and go to state 40
    postfix_expression             shift and go to state 34
    expression                     shift and go to state 52
    additive_expression            shift and go to state 31
    primary_expression             shift and go to state 43

state 21

    (18) function_declarator -> ID LPAREN . parameter_list RPAREN
    (19) function_declarator -> ID LPAREN . RPAREN
    (20) parameter_list -> . parameter_declaration
    (21) parameter_list -> . parameter_list COMMA parameter_declaration
    (22) parameter_declaration -> . type function_declarator
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING

    RPAREN          shift and go to state 53
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    STRING          shift and go to state 3

    parameter_declaration          shift and go to state 55
    type                           shift and go to state 56
    parameter_list                 shift and go to state 54

state 22

    (14) declarator_list -> declarator_list COMMA . declarator
    (15) declarator -> . function_declarator
    (16) declarator -> . function_declarator EQUALS expression
    (17) function_declarator -> . ID
    (18) function_declarator -> . ID LPAREN parameter_list RPAREN
    (19) function_declarator -> . ID LPAREN RPAREN

    ID              shift and go to state 15

    function_declarator            shift and go to state 17
    declarator                     shift and go to state 57

state 23

    (7) declaration -> type declarator_list SEMI .

    EXTERN          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    INT             reduce using rule 7 (declaration -> type declarator_list SEMI .)
    FLOAT           reduce using rule 7 (declaration -> type declarator_list SEMI .)
    STRING          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    $end            reduce using rule 7 (declaration -> type declarator_list SEMI .)
    RBRACE          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    LBRACE          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    IF              reduce using rule 7 (declaration -> type declarator_list SEMI .)
    WHILE           reduce using rule 7 (declaration -> type declarator_list SEMI .)
    FOR             reduce using rule 7 (declaration -> type declarator_list SEMI .)
    DO              reduce using rule 7 (declaration -> type declarator_list SEMI .)
    RETURN          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    MINUS           reduce using rule 7 (declaration -> type declarator_list SEMI .)
    ID              reduce using rule 7 (declaration -> type declarator_list SEMI .)
    SCONST          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    LPAREN          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    ICONST          reduce using rule 7 (declaration -> type declarator_list SEMI .)
    FCONST          reduce using rule 7 (declaration -> type declarator_list SEMI .)


state 24

    (39) iteration_instruction -> DO . instruction WHILE LPAREN condition RPAREN SEMI
    (23) instruction -> . expression_instruction
    (24) instruction -> . compound_instruction
    (25) instruction -> . select_instruction
    (26) instruction -> . iteration_instruction
    (27) instruction -> . jump_instruction
    (28) expression_instruction -> . expression SEMI
    (29) compound_instruction -> . LBRACE declaration_list instruction_list RBRACE
    (30) compound_instruction -> . LBRACE instruction_list RBRACE
    (31) compound_instruction -> . LBRACE declaration_list RBRACE
    (32) compound_instruction -> . LBRACE RBRACE
    (35) select_instruction -> . IF LPAREN condition RPAREN instruction
    (36) select_instruction -> . IF LPAREN condition RPAREN instruction ELSE instruction
    (37) iteration_instruction -> . WHILE LPAREN condition RPAREN instruction
    (38) iteration_instruction -> . FOR LPAREN expression SEMI condition SEMI expression RPAREN instruction
    (39) iteration_instruction -> . DO instruction WHILE LPAREN condition RPAREN SEMI
    (40) jump_instruction -> . RETURN expression SEMI
    (41) expression -> . additive_expression
    (42) expression -> . unary_expression assignment_operator expression
    (43) expression -> . expression LSHIFT additive_expression
    (44) expression -> . expression RSHIFT additive_expression
    (58) additive_expression -> . multiplicative_expression
    (59) additive_expression -> . additive_expression PLUS multiplicative_expression
    (60) additive_expression -> . additive_expression MINUS multiplicative_expression
    (65) unary_expression -> . postfix_expression
    (66) unary_expression -> . MINUS unary_expression
    (61) multiplicative_expression -> . unary_expression
    (62) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (63) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (64) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (67) postfix_expression -> . primary_expression
    (68) postfix_expression -> . postfix_expression LPAREN argument_expression_list RPAREN
    (69) postfix_expression -> . postfix_expression LPAREN RPAREN
    (70) postfix_expression -> . postfix_expression PLUSPLUS
    (71) postfix_expression -> . postfix_expression MINUSMINUS
    (72) primary_expression -> . ID
    (73) primary_expression -> . constant
    (74) primary_expression -> . SCONST
    (75) primary_expression -> . LPAREN expression RPAREN
    (78) constant -> . ICONST
    (79) constant -> . FCONST
